test/correct/EnumInt.hs
main = ( take 10 [1..]
       , take 10 [1,3..]
       , [1,3..10]
       , [1..10]
       )
