test/typeerrors/Examples/RightSection.hs
module RightSection where

test :: [Int]
test = filter (False ==) [1..10]
